# flatlib

./: pyproject.toml  requirements.txt  setup.py
docs/source/: conf.py
docs/source/tutorials/: chart-properties.rst  index.rst  intro-flatlib.rst  list-objects.rst
flatlib/: angle.py  aspects.py  chart.py  const.py  datetime.py  geopos.py  lists.py  object.py  props.py  radix.py  utils.py
flatlib/ephem/: eph.py  ephem.py  swe.py
recipes/: arabicparts.py  aspects.py  behavior.py  essentialdignities.py  houses.py  planetarytime.py  planetspositions.py
server/: test.py
