[tool.poetry]
name = "flatlib"
version = "0.2.6"
description = ""
authors = ["João Ventura"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyswisseph = "^2.10.3.2"
modplot = "^0.1.1"
datetime = "^5.5"
matplotlib = "^3.8.4"
pycapsule = "^0.0.8"
numpy = "^1.26.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
